finished hw2-swapping

--- a/written1.tex
+++ b/written1.tex
@@ -1,7 +1,7 @@
 \documentclass[a4paper,12pt]{article}
 \begin{document}
 \begin{eqnarray*}
-\frac{n!}{r!(n-r)!}&=&\frac{(n-1)!}{r!(n-1-r)}+\frac{(n-1)!}{(r-1)!((n-1)-(r-1))!}\\
+\frac{n!}{r!(n-r)!}&=&\frac{(n-1)!}{r!(n-1-r)!}+\frac{(n-1)!}{(r-1)!((n-1)-(r-1))!}\\
 &=&\frac{(n-1)!}{r!(n-1-r)!}+\frac{(n-1)!}{(r-1)!(n-r)!}\\
 &=&...\\
 &=&\frac{(n-r+r)(n-1)!}{r(r-1)!(n-r)(n-r-1)!}\\
